--- a/second project.html
+++ b/second project.html
@@ -11,6 +11,7 @@
           <title>
               scholarship form 
           </title>
+        <meta name="viewport", content="width=device-width, initail-scale=1.0">
       </head>
       <body>
           <h1 style="color:black"><b>&nbsp;&nbsp;scholarship</b></h1>
