--- a/second project.html
+++ b/second project.html
@@ -44,7 +44,7 @@
             Please ensure you print your form before you
             <li>submit.</li>
          </h5>
-         
+         <legend>
          <form>
             &nbsp;<h3> Ogun Appication Form </h3>
            <b style="background:grey ;" > BIO-DATA</b>
@@ -149,6 +149,7 @@
             <input style="background-color: red;" type="submit"
             value="Submit">
             </form>
+         </legend>
             <br></br>
             <br></br>
             Tag:<b>2014</b>
