--- a/second project.html
+++ b/second project.html
@@ -31,7 +31,7 @@
 
         </style><b>WORLD</b>
         <p></p>
-<img src="john.jpg" alt="scholarship">
+<img src="john.jpg" style="width:100%" alt="scholarship">
 
         
        <h2><b>
